<resources>
    <string name="app_name">迪尔空分</string>
    <string name="return_previous">返回</string>
    <string name="laser_cutting_machine">激光切割机</string>
    <string name="album">相册</string>
    <string name="select_maximum">最多选择%1$d张</string>
    <string name="start_meeting">发起会议</string>
    <string name="announcement">通知</string>
    <string name="mobile_office">移动办公</string>
    <string name="examine_and_approve">审批</string>
    <string name="live_stream_meeting">视频会议</string>
    <string name="focus_smart_control">智能管控</string>
    <string name="real_time_progress">实时进展</string>
    <string name="device_management">设备管理</string>
    <string name="process_control">过程控制</string>
    <string name="security_management">安全管理</string>
    <string name="you_got_meeting">您有会议邀请</string>
    <string name="meeting_starter">会议发起人</string>
    <string name="meeting_attendant">会议参与者</string>
    <string name="request_permission">敬请授权</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="please_select_meeting_attendants">请选择1-12人参加视频会议</string>
    <string name="search">搜索</string>
    <string name="hr_management">人员管理</string>
    <string name="hr_administration">人员管理</string>
    <string name="staff_location">人员位置</string>
    <string name="staff_status">人员状况</string>
    <string name="staff_performance">人员业绩</string>
    <string name="staff_number">工作人数：</string>
    <string name="live_stream">实时画面</string>
    <string name="please_input_achievement">请输入产出值</string>
    <string name="sign_in_success">签到成功</string>
    <string name="you_have_signed_off">你已签退</string>
    <string name="quality_control">质量管理</string>
    <string name="staff_sign_in">人员签到</string>
    <string name="staff_sign_off">人员签退</string>
    <string name="update_achievement">业绩上报</string>
    <string name="submit">提交</string>
    <string name="total_staffs_number">公司总人数</string>
    <string name="no_data">无数据</string>
    <string name="default_title_realtime_progress">我的关注</string>
    <string name="default_title_process_control">我的工作</string>
    <string name="default_title_mobile_office">掌上办公</string>
    <string name="default_title_smart_analysis">智慧管理</string>
    <string name="analysis_stock_overview_description">安全库存是预防急单和产能不足而设置的库存量，能够缓解急单对半成品生产的冲击、均衡生产能力。建立合适的安全库存，保证库存齐套性。齐套的库存有利货物尽快发出，减少等待时间，并且尽量避免高价值物料等待低价值物料。</string>
    <string name="analysis_stock_turn_over_description">从控制的基本过程：测量、诊断、调整来看，统计分析是库存控制的基础。通过库存周转率、合同及发货率等统计指标，从降低库存、满足需求两方面体现生产运作水平。库存周转率的提高意味着缺货风险增大，或因小批量采购导致成本增加。库存控制不等于一味强调低库存、高周转率。</string>
    <string name="analysis_stock_summary_description">
        1，原材料库存中呆滞和冗余物料占有较大比例，主要原因是以往呆滞料处理相应操作有做，但形成的决定没有得到有效执行，以后须强调处理的及时性和加大处理力度
        2，开发设计过程中需要的新材料应优先在原材料中挑用，便于增强库存材料的通用性，减少品号数量
        3，加强销售、生产计划性，合理安排成品库存，当部分产品及滞销或面临淘汰时及时调整相应安全库存额定量，压缩对应原材料采购量，从而避免呆滞。</string>
    <string name="please_input_search_item">请输入搜索内容</string>
    <string name="security_report">报&#8194;警&#8194;人</string>
    <string name="please_input_name_to_search">请输入姓名搜索</string>
    <string name="textLength">%d/240</string>
    <string name="focus_purchase_code">代号：%s</string>
    <string name="focus_purchase_spec">规格：%s</string>
    <string name="focus_purchase_quality">材质：%s</string>
    <string name="focus_purchase_return">退货数量：%d</string>
    <string name="focus_purchase_replace">换货数量：%d</string>
    <string name="focus_purchase_result">质检结果：%s</string>
    <string name="focus_purchase_return_reason">退货原因：%s</string>
    <string name="focus_purchase_replace_reason">换货原因：%s</string>
    <string name="focus_purchase_delay_reason">拖期原因：%s</string>
    <string name="focus_purchase_project_code">项目编号：%s</string>
    <string name="focus_purchase_project_name">项目名称：%s</string>
    <string name="focus_purchase_support_name">供应商名称：%s</string>
    <string name="focus_purchase_person">操作人：%s</string>
    <string name="focus_purchase_provide">供应商&#12288;&#12288;&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_contract_code">合同编号&#12288;&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_sign_time">签订时间&#12288;&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_arrive_time">到货时间&#12288;&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_person_in">采购跟进人&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_sign_person">签订人员&#12288;&#12288;&#12288;&#12288;<font color='#757575'>%s</font></string>
    <string name="focus_purchase_record_reason">换货原因：%s</string>
    <string name="focus_purchase_record_from">来自部门：%s</string>
    <string name="focus_purchase_seal_person">销售人员：%s</string>
    <string name="focus_assess_point">评审点%d</string>
    <string name="work_goods_sign_contract">合同编号：%s</string>
    <string name="work_goods_sign_person">采购跟进：%s</string>
    <string name="work_goods_sign_time">到货时间：%s</string>
    <string name="work_goods_sign_total_number">总数量：%d</string>
    <string name="work_goods_sign_exchange_number">换货数量：%d</string>
    <string name="work_goods_sign_return_number">退货数量：%d</string>
    <string name="work_goods_sign_unit">单位：%s</string>
    <string name="work_goods_sign_spec">规格：%s</string>
    <string name="work_goods_sign_material">材质：%s</string>
    <string name="work_goods_sign_remark">备注：%s</string>
    <string name="piece_number">%d&#12288;件</string>
    <string name="project_name">项目名称：%s</string>
    <string name="project_code">项目编号：%s</string>
    <string name="customer_name">客户名称：%s</string>
    <string name="car_number">车牌号：%s</string>
    <string name="description">描述：%s</string>
    <string name="goods_number">货物数量：%d</string>
    <string name="phone_number">手机号：%s</string>
    <string name="code">代号：%s</string>
    <string name="spec">规格：%s</string>
    <string name="quality">材质：%s</string>
    <string name="remark">备注：%s</string>
    <string name="contract_person">联系人：%s</string>
    <string name="commit_person">提交人：%s</string>
    <string name="product_name">产品名称：%s</string>
    <string name="product_code">产品代号：%s</string>
    <string name="number">数量：%d</string>
    <string name="contract_code">合同编号：%s</string>
    <string name="sales_person_name">销售人员：%s</string>
    <string name="return_goods_number">退货数量：%d</string>
    <string name="replace_goods_number">换货数量：%d</string>
    <string name="focus_after_sale_project_name">项目名称：%s</string>
    <string name="focus_after_sale_customer_name">客户名称：%s</string>
    <string name="focus_after_sale_address">施工地址：%s</string>
    <string name="focus_after_sale_person">排查人员：%s</string>
    <string name="focus_after_sale_question_type">问题类型：%s</string>
    <string name="focus_after_sale_idea">处理意见：%s</string>
    <string name="focus_after_sale_description_">描述：%s</string>
    <string name="focus_transport_car_number">车牌号：%s</string>
    <string name="focus_transport_phone_number">手机号：%s</string>
    <string name="focus_transport_goods_number">货物数量：%d</string>
    <string name="focus_transport_code">代号：%s</string>
    <string name="focus_transport_spec">规格：%s</string>
    <string name="focus_transport_remark">备注：%s</string>
    <string name="focus_transport_contract_name">联系人：%s</string>
    <string name="focus_transport_total_number">共%d个</string>
    <string name="focus_transport_arrive_address">收货地址：%s</string>
    <string name="focus_transport_plan_arrive_time">预计到货时间：%s</string>
    <string name="focus_transport_driver_phone">司机手机号：%s</string>
    <string name="focus_transport_send_code">发货编号：%s</string>
    <string name="work_matter_apply_spec">材料规格：%s</string>
    <string name="work_matter_apply_project_name">项目名称：%s</string>
    <string name="work_matter_apply_person_name">审核人员：%s</string>
    <string name="work_matter_apply_time">审核时间：%s</string>
    <string name="work_matter_apply_number">领用数量：%d</string>
    <string name="work_goods_sign_tip">重要提醒：请认真核对实际到货产品信息和数量是否一致，谢谢！</string>
    <string name="office_approval_duty_unit">责任单位：%s</string>
    <string name="office_approval_pause_reason">暂停原因：%s</string>
    <string name="message_no_data_tip">暂无消息</string>
    <string name="contract_pause_tip">暂停：申请一旦通过系统审核，系统会自动终止所有进行中的任务！项目状态将显示暂停中标识。请谨慎操作！</string>
    <string name="contract_restart_tip">重启：申请一但通过系统审核，系统会重启所有暂停中的任务，该项目将状态恢复正常，请确认好信息无误的情况下提交重启申请，谢谢！</string>
</resources>