<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="matterApplyViewModel"
            type="com.guyuan.dear.work.matterapply.data.MatterApplyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <include
                android:id="@+id/toolbar_container"
                layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12">

                <TextView
                    android:id="@+id/matter_detail_name_tv"
                    style="@style/TextBigBold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{matterApplyViewModel.matterDetailMLD.productName}"
                    tools:text="深圳固远" />

                <TextView
                    android:id="@+id/matter_detail_tag_tv"
                    style="@style/TextTagBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    app:matterStatus="@{matterApplyViewModel.matterDetailMLD.approvalStatus}"
                    tools:text="代签收" />
            </LinearLayout>

            <View style="@style/DivideLine" />

            <TextView
                android:id="@+id/matter_detail_code_tv"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/code,matterApplyViewModel.matterDetailMLD.materialCode)}"
                tools:text="@string/code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12">

                <TextView
                    android:id="@+id/matter_detail_spec_tv"
                    style="@style/TextSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:visibilityByContent="@{String.format(@string/spec,matterApplyViewModel.matterDetailMLD.modelCode)}"
                    tools:text="@string/spec" />

                <TextView
                    android:id="@+id/matter_detail_material_tv"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:visibilityByContent="@{String.format(@string/quality,matterApplyViewModel.matterDetailMLD.material)}"
                    tools:text="@string/quality" />
            </LinearLayout>

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/number,matterApplyViewModel.matterDetailMLD.purchaseNum)+matterApplyViewModel.matterDetailMLD.unit}"
                tools:text="@string/number" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/remark,matterApplyViewModel.matterDetailMLD.remark)}"
                tools:text="@string/remark" />

            <View
                style="@style/DivideLine"
                android:layout_marginTop="@dimen/dp_12" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/project_name,matterApplyViewModel.matterDetailMLD.projectName)}"
                tools:text="@string/project_name" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:textColor="#999999"
                app:rightContentWithTitle="@{String.format(@string/project_code,matterApplyViewModel.matterDetailMLD.projectCode)}"
                tools:text="@string/project_code" />

            <View
                style="@style/DivideLine"
                android:layout_height="8dp"
                android:layout_marginTop="@dimen/dp_16" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@{String.format(@string/work_matter_apply_number,matterApplyViewModel.matterDetailMLD.number)}"
                tools:text="@string/work_matter_apply_number" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/work_matter_apply_person_name,matterApplyViewModel.matterDetailMLD.approveName)}"
                tools:text="@string/work_matter_apply_person_name" />

            <TextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:rightContentWithTitle="@{String.format(@string/work_matter_apply_time,matterApplyViewModel.matterDetailMLD.createTime)}"
                tools:text="@string/work_matter_apply_time" />
        </LinearLayout>

    </LinearLayout>
</layout>