<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transportViewModel"
            type="com.guyuan.dear.focus.transport.data.TransportViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_window"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <include
                android:id="@+id/toolbar_container"
                layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView style="@style/CardViewCommon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_12">

                <TextView
                    android:id="@+id/transport_detail_name_tv"
                    style="@style/TextBigBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:rightContentWithTitle="@{String.format(@string/project_name,transportViewModel.transportDetailMLD.projectName)}"
                    tools:text="@string/project_name" />

                <TextView
                    android:id="@+id/transport_detail_code_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:rightContentWithTitle="@{String.format(@string/project_code,transportViewModel.transportDetailMLD.projectNumber)}"
                    tools:text="@string/project_code" />

                <TextView
                    android:id="@+id/transport_detail_send_code_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:rightContentWithTitle="@{String.format(@string/focus_transport_send_code,transportViewModel.transportDetailMLD.sendGoodsNumber)}"
                    tools:text="@string/focus_transport_send_code" />

                <TextView
                    android:id="@+id/transport_detail_address_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:textColor="#999999"
                    app:rightContentWithTitle="@{String.format(@string/focus_transport_arrive_address,transportViewModel.transportDetailMLD.acceptAddress)}"
                    tools:text="@string/focus_transport_arrive_address" />

                <TextView
                    android:id="@+id/transport_detail_time_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#999999"
                    app:rightContentWithTitle="@{String.format(@string/focus_transport_plan_arrive_time,transportViewModel.transportDetailMLD.arrivePlanTime)}"
                    tools:text="@string/focus_transport_plan_arrive_time" />

                <TextView
                    android:id="@+id/transport_detail_car_number_tv"
                    style="@style/TextBigBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    app:rightContentWithTitle="@{String.format(@string/car_number,transportViewModel.transportDetailMLD.carNumber)}"
                    tools:text="@string/car_number" />

                <TextView
                    android:id="@+id/transport_detail_phone_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:drawableRight="@mipmap/ic_phone_blue"
                    android:drawablePadding="8dp"
                    app:rightContentWithTitle="@{String.format(@string/focus_transport_driver_phone,transportViewModel.transportDetailMLD.motormanPhone)}"
                    tools:text="@string/focus_transport_driver_phone" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/transport_detail_tl"
            style="@style/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_1"
            app:tabPaddingEnd="30dp"
            app:tabPaddingStart="30dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/transport_detail_vp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:detailData="@{transportViewModel.transportDetailMLD}" />
    </LinearLayout>
</layout>

