<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12">

        <TextView
            android:id="@+id/sale_question_type_tv"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/focus_after_sale_question_type" />

        <TextView
            android:id="@+id/sale_question_description_tv"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#999999"
            app:layout_constraintStart_toStartOf="@+id/sale_question_type_tv"
            app:layout_constraintTop_toBottomOf="@+id/sale_question_type_tv"
            tools:text="@string/focus_after_sale_description_" />

        <TextView
            android:id="@+id/sale_question_idea_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#1890FF"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@+id/sale_question_type_tv"
            app:layout_constraintTop_toBottomOf="@+id/sale_question_description_tv"
            tools:text="@string/focus_after_sale_idea" />

        <View
            style="@style/DivideLine"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sale_question_idea_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
