<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView style="@style/CardViewCommon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_12">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sale_title_tv"
                        style="@style/TextBigBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="深圳固远" />

                    <TextView
                        android:id="@+id/sale_status_tv"
                        style="@style/TextSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        tools:text="验收合格" />
                </LinearLayout>

                <TextView
                    android:id="@+id/sale_project_name_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/focus_after_sale_project_name" />

                <TextView
                    android:id="@+id/sale_customer_name_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#999999"
                    tools:text="@string/focus_after_sale_customer_name" />

                <TextView
                    android:id="@+id/sale_address_name_tv"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#999999"
                    tools:text="@string/focus_after_sale_address" />

                <View
                    style="@style/DivideLine"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/sale_person_name_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#1890FF"
                        android:textSize="12sp"
                        tools:text="@string/focus_after_sale_person" />


                    <TextView
                        android:id="@+id/sale_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1890FF"
                        android:textSize="12sp"
                        tools:text="2020-11-22" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>
